<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/flexboxHolder"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/recipient_group_FL"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:alignContent="space_around"
            app:alignItems="stretch"
            app:flexWrap="wrap_reverse"
            app:showDivider="beginning|middle|end">

            <EditText
                android:id="@+id/editTextTags"
                android:layout_width="250dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:hint="work, conference-call, etc."
                android:imeOptions="actionSend"
                android:inputType="text"
...

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="noHideDescendants"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
...

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="endButton"
        android:text="@string/pomodoro_stop_button"
        android:visibility="invisible"
        app:backgroundTint="?attr/colorError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
...
