<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/tag_5"
    android:orientation="vertical"
    android:padding="20dp">
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter session duration in minutes"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editTextSessionMinutes"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="minutes"
        android:inputType="numberDecimal"
        android:tag="timerEdit"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/set_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_session_time_ok"
        app:backgroundTint="@color/teal_700" />
</LinearLayout>
