...
    <TextView
        android:id="@+id/tagsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:text="tag1, tag2, tag3"
        app:layout_constraintEnd_toEndOf="@+id/editTextSessionInfoTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextSessionInfoTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextSessionInfoTitle"
        tools:layout_conversion_absoluteHeight="23dp"
        tools:layout_conversion_absoluteWidth="101dp" />

...
